--- a/css/grid.css
+++ b/css/grid.css
@@ -1,76 +1,304 @@
-.g{
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-o-box-sizing: border-box;
-	-ms-box-sizing: border-box;
-	box-sizing: border-box;
-}
-.g{
-	display: block;
-	width: 100%;
-	margin: 0 auto;
-	padding: 0;
-	list-style-type: none;
-}
-.g.w720{
-	max-width: 720px;
-}
-.g.w960{
-	max-width: 960px;
-}
-.g.w1140{
-	max-width: 1140px;
+/* line 22, d:/Copy/Divisory/Public/grid/css/scss/grid.scss */
+.g,
+.g--rev {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+  display: block;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0;
+  list-style-type: none;
 }
 
+/* line 34, d:/Copy/Divisory/Public/grid/css/scss/grid.scss */
+.g {
+  direction: ltr;
+}
 
+/* line 37, d:/Copy/Divisory/Public/grid/css/scss/grid.scss */
+.g--rev {
+  direction: rtl;
+}
 
+/* line 41, d:/Copy/Divisory/Public/grid/css/scss/grid.scss */
+.g.w720,
+.g--rev.w720 {
+  max-width: 720px;
+}
+
+/* line 45, d:/Copy/Divisory/Public/grid/css/scss/grid.scss */
+.g.w960,
+.g--rev.w960 {
+  max-width: 960px;
+}
+
+/* line 49, d:/Copy/Divisory/Public/grid/css/scss/grid.scss */
+.g.w1140,
+.g--rev.w1140 {
+  max-width: 1140px;
+}
+
+/* line 54, d:/Copy/Divisory/Public/grid/css/scss/grid.scss */
 .c,
-.cc{
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-o-box-sizing: border-box;
-	-ms-box-sizing: border-box;
-	box-sizing: border-box;
-	display: inline-block;
-	vertical-align: top;
-	width: 100%;
-	padding: 0 10px;
-}
-.cc{
-	padding: 0;
+.cc {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+  display: inline-block;
+  vertical-align: top;
+  width: 100%;
+  padding: 0 10px;
 }
 
+/* line 65, d:/Copy/Divisory/Public/grid/css/scss/grid.scss */
+.cc {
+  padding: 0;
+}
 
+/* line 68, d:/Copy/Divisory/Public/grid/css/scss/grid.scss */
+.c-c {
+  padding: 0 20px;
+}
 
-.d2,.x1d2		{width: 50%;}
-.d3,.x1d3		{width: 33.333333333%}
-.x2d3			{width: 66.666666666%}
-.d4,.x1d4		{width: 25%;}
-.x3d4			{width: 75%;}
-.d12,.x1d12		{width: 8.333333333%;}
-.d6,.x1d6		{width: 16.666666666%}
-.x5d12			{width: 41.666666666%;}
-.x7d12			{width: 58.333333333%;}
-.x10d12,.x5d6	{width: 83.333333333%;}
-
-
-
+/* line 76, d:/Copy/Divisory/Public/grid/css/scss/grid.scss */
 .lt-ie9 .c,
 .lt-ie9 .cc,
 .no-js .c,
-.no-js .cc{
-	display: block;
-	width: 100%;
-	padding-left: 0;
-	padding-right: 0;
+.no-js .cc,
+.no-js .c-c {
+  display: block !important;
+  width: 100% !important;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 }
 
+/* line 94, d:/Copy/Divisory/Public/grid/css/scss/grid.scss */
 .lt-ie9 .g.w1140,
 .lt-ie9 .g.w720,
 .lt-ie9 .g.w960,
 .no-js .g.w1140,
 .no-js .g.w960,
-.no-js .g.w720{
-	width: 100%;
-	max-width: 100%;
+.no-js .g.w720,
+.lt-ie9 .g--rev.w1140,
+.lt-ie9 .g--rev.w720,
+.lt-ie9 .g--rev.w960,
+.no-js .g--rev.w1140,
+.no-js .g--rev.w960,
+.no-js .g--rev.w720 {
+  width: 100% !important;
+  max-width: 100% !important;
+}
+
+/* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+.x1d2, .x2d4, .x3d6, .x6d12 {
+  width: 50%;
+}
+
+/* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+.x1d3, .x2d6, .x4d12 {
+  width: 33.33333%;
+}
+
+/* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+.x2d3, .x4d6, .x8d12 {
+  width: 66.66667%;
+}
+
+/* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+.x1d4, .x3d12 {
+  width: 25%;
+}
+
+/* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+.x3d4, .x9d12 {
+  width: 75%;
+}
+
+/* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+.x1d5 {
+  width: 20%;
+}
+
+/* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+.x2d5 {
+  width: 40%;
+}
+
+/* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+.x3d5 {
+  width: 60%;
+}
+
+/* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+.x4d5 {
+  width: 80%;
+}
+
+/* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+.x1d6, .x2d12 {
+  width: 16.66667%;
+}
+
+/* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+.x5d6, .x10d12 {
+  width: 83.33333%;
+}
+
+/* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+.x1d12 {
+  width: 8.33333%;
+}
+
+/* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+.x5d12 {
+  width: 41.66667%;
+}
+
+/* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+.x7d12 {
+  width: 58.33333%;
+}
+
+/* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+.x11d12 {
+  width: 91.66667%;
+}
+
+@media (min-width: 480px) {
+  /* line 18, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+  .x1--m {
+    width: 100%;
+  }
+
+  /* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+  .x1d2--m {
+    width: 50%;
+  }
+
+  /* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+  .x1d3--m {
+    width: 33.33333%;
+  }
+
+  /* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+  .x2d3--m {
+    width: 66.66667%;
+  }
+}
+@media (min-width: 960px) {
+  /* line 18, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+  .x1--t {
+    width: 100%;
+  }
+
+  /* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+  .x1d2--t, .x2d4--t {
+    width: 50%;
+  }
+
+  /* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+  .x1d3--t {
+    width: 33.33333%;
+  }
+
+  /* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+  .x2d3--t {
+    width: 66.66667%;
+  }
+
+  /* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+  .x1d4--t {
+    width: 25%;
+  }
+
+  /* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+  .x3d4--t {
+    width: 75%;
+  }
+}
+@media (min-width: 1200px) {
+  /* line 18, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+  .x1--d {
+    width: 100%;
+  }
+
+  /* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+  .x1d2--d, .x2d4--d, .x3d6--d, .x6d12--d {
+    width: 50%;
+  }
+
+  /* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+  .x1d3--d, .x2d6--d, .x4d12--d {
+    width: 33.33333%;
+  }
+
+  /* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+  .x2d3--d, .x4d6--d, .x8d12--d {
+    width: 66.66667%;
+  }
+
+  /* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+  .x1d4--d, .x3d12--d {
+    width: 25%;
+  }
+
+  /* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+  .x3d4--d, .x9d12--d {
+    width: 75%;
+  }
+
+  /* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+  .x1d5--d {
+    width: 20%;
+  }
+
+  /* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+  .x2d5--d {
+    width: 40%;
+  }
+
+  /* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+  .x3d5--d {
+    width: 60%;
+  }
+
+  /* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+  .x4d5--d {
+    width: 80%;
+  }
+
+  /* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+  .x1d6--d, .x2d12--d {
+    width: 16.66667%;
+  }
+
+  /* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+  .x5d6--d, .x10d12--d {
+    width: 83.33333%;
+  }
+
+  /* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+  .x1d12--d {
+    width: 8.33333%;
+  }
+
+  /* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+  .x5d12--d {
+    width: 41.66667%;
+  }
+
+  /* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+  .x7d12--d {
+    width: 58.33333%;
+  }
+
+  /* line 35, d:/Copy/Divisory/Public/grid/css/scss/_calc.scss */
+  .x11d12--d {
+    width: 91.66667%;
+  }
 }
