--- a/css/skin.css
+++ b/css/skin.css
@@ -1,47 +1,52 @@
+/* line 12, d:/Copy/Divisory/Public/grid/css/scss/skin.scss */
 html,
 body {
-	margin: 0;
-	width: 100%;
-	overflow-x: hidden;
-	font-family: 'Consolas', sans-serif;
-	font-size: 11px;
+  margin: 0;
+  width: 100%;
+  overflow-x: hidden;
+  font-family: "Consolas", sans-serif;
+  font-size: 11px;
 }
 
-.no-js body:after{
-	display: block;
-	position: fixed;
-	top: 5px;
-	left: 5%;
-	right: 5%;
-	padding: 10px 0;
-	background: firebrick;
-	color: lightyellow;
-	text-align: center;
-	font-weight: bold;
-	z-index: 100500;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
-	content: 'This page requires JavaScript for correct performance';
+/* line 20, d:/Copy/Divisory/Public/grid/css/scss/skin.scss */
+.no-js body:after {
+  display: block;
+  position: fixed;
+  top: 5px;
+  left: 5%;
+  right: 5%;
+  padding: 10px 0;
+  background: firebrick;
+  color: lightyellow;
+  text-align: center;
+  font-weight: bold;
+  z-index: 100500;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  content: 'This page requires JavaScript for correct performance';
 }
 
+/* line 39, d:/Copy/Divisory/Public/grid/css/scss/skin.scss */
 .disable-hover,
 .disable-hover * {
-	pointer-events: none !important;
+  pointer-events: none !important;
 }
 
-.ir{
-	position: absolute;
-	overflow: hidden;
-	width: 1px;
-	height: 1px;
-	left: -1000%;
-	top: -1000%;
-	text-indent: -1000%;
+/* line 43, d:/Copy/Divisory/Public/grid/css/scss/skin.scss */
+.ir {
+  position: absolute;
+  overflow: hidden;
+  width: 1px;
+  height: 1px;
+  left: -1000%;
+  top: -1000%;
+  text-indent: -1000%;
 }
 
-img.r{
-	width: 100%;
-	height: auto;
-	display: block;
+/* line 53, d:/Copy/Divisory/Public/grid/css/scss/skin.scss */
+img.r {
+  width: 100%;
+  height: auto;
+  display: block;
 }
